@@ -31,7 +31,8 @@ sauron.cgi:
 	- allow user to list her previous sessions (similar to
           "last" command-line command)
         - more detailed logging (especially  host add/edit/delete)
-	- "toggle" button to toggle between host<-->hostreservation
+	- allow linking of pages "inside" Sauron (redirect user to
+          the page in original url after successfull authentication)
           
 
 browser.cgi:
